--- a/index.html
+++ b/index.html
@@ -51,37 +51,152 @@
             <div class="container-articulo">
                 <div class="articulo">
                     <i class="fas fa-graduation-cap"></i><!--icono graduacion -->
-                    <h3>Bachillerato</h3>
-                    <p>Info de mi bachi</p>
+                    <h3>Bachillerato Tecnológico</h3>
+                    <h4>Col·legi Sagrat Cor-Diputació, Barcelona (2017)</h4>
                     <a href="#">Read more</a>
                 </div>
                 <div class="articulo">
                     <i class="fas fa-university"></i>
-                    <h3>Universidad</h3>
-                    <p>Info de mi uni</p>
+                    <h3>Ingeniería en Sistemas Audiovisuales</h3>
+                    <h4>Universitat Pompeu Fabra (UPF), Barcelona (2017-2021)</h4>
                     <a href="#">Read more</a>
                 </div>
                 <div class="articulo">
                     <i class="fas fa-guitar"></i>
-                    <h3>Guitarra</h3>
-                    <p>Info de mi guitarra</p>
+                    <h3>Guitar Grade 7</h3>
+                    <h4>ABRSM, junio de 2019</h4>
+                    <p>Certificado de Royal Schools of Music: Grado 7 de instrumento, Guitarra.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="articulo">
                     <i class="fas fa-music"></i>
-                    <h3>Teoría Musical</h3>
-                    <p>Info de teoría Musical</p>
+                    <h3>Theory of Music Grade 6</h3>
+                    <h4>ABRSM, junio de 2017</h4>
+                    <p>Certificado de Royal Schools of Music: Grado 6 de teoría musical.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="articulo">
                     <i class="fas fa-scroll"></i>
-                    <h3>Barcelona Activa</h3>
-                    <p>Info del curso de Barcelona Activa</p>
+                    <h3>Introducción al desarrollo web (I)</h3>
+                    <h4>Google Actívate, enero de 2021</h4>
+                    <p>ID de la credencial EG2 53T MFE</p>
+                    <a href="#">Read more</a>
+                </div>
+                <div class="articulo">
+                    <i class="fas fa-car"></i>
+                    <h3>Licencia de Conducción (B)</h3>
+                    <h4>Dirección General de Tráfico (DGT), junio de 2018</h4>
+                    <p>Vencimiento: junio de 2028</p>
                     <a href="#">Read more</a>
                 </div>
             </div>
         </div>
     </section>
+    <section class="exp-container">
+        <div class="container1">
+            <h2 class="titulo">Work experience</h2>
+            <div class="container-exp">
+                <div class="exp">
+                    <div class="titles">
+                        <h3>Profesor de Guitarra</h3>
+                        <h4>EMAC (Escola de Música Àngels Cases)</h4>
+                        <h5>Febrero 2018 (1 mes)</h5>
+                        <h6>Barcelona</h6>
+                        <ul>Clases particulares a alumn@s entre 9 y 19 años.</ul>
+                    </div>
+                    <img src="img/emac_logo.png" alt="">
+                    <a href="https://estudicasas.com/wordpress/" target="_blank">EMAC</a> <!-- target="_blank" para abrir en una nueva ventana atuo -->
+                </div>
+                <div class="exp">
+                    <div class="titles">
+                        <h3>Clases particulares de ofimática</h3>              
+                    </div>
+                </div>
+                <div class="exp">
+                    <div class="titles">
+                        <h3>Social Media Manager</h3>
+                        <h4>Helena Olcina</h4>
+                        <h5>Mayo 2021 (3 meses)</h5>
+                        <h6>Online</h6>
+                        <ul>
+                            <li>Crear planes de marketing a medida de cada cliente.</li>
+                            <li>Diseñar el calendario de Publicaciones.</li>
+                            <li>Diseñar las imágenes y piezas audiovisuales que acompañarán a la estrategia de marca escogida (trabajo en postproducción).</li>
+                            <li>Revisar y participar en la comunicación online de cada marca.</li>
+                        </ul>                        
+                    </div>
+                    <img src="img/helenaOlcina_logo.png" alt="">
+                    <a href="http://helenaolcina.com/"  target="_blank">Helena Olcina</a>
+                </div>
+            </div>
+        </div>
+        <!-- <img src="img/social_media.svg" alt="" data-aos="zoom-out-up" data-aos-duration="2000"> -->
+    </section>
+
+    <section class="results">
+        <div class="contenedor1 conten-results">
+            <section class="numbers">
+                <div class="number" data-aos="zoom-in-left">
+                    <h4>+8863</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, id.</p>
+                </div>
+                <div class="number" data-aos="zoom-in-left">
+                    <h4>+8863</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, id.</p>
+                </div>
+                <div class="number" data-aos="zoom-in-left">
+                    <h4>+8863</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, id.</p>
+                </div>
+                <div class="number" data-aos="zoom-in-left">
+                    <h4>+8863</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, id.</p>
+                </div>
+            </section>
+            <section class="results-text">
+                <h4>Lorem ipsum dolor sit amet.</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet sequi nihil unde.</p>
+                <a href="#">Ingrese aquí</a>
+            </section>
+        </div>
+    </section>
+
+    <section class="contenedor1 services">
+        <img src="img/terceraIlustracion.svg" alt="">
+        <div class="box-skills">
+            <h4><i class="far fa-check-circle"></i> Web design</h4>
+            <h4><i class="far fa-check-circle"></i> Web development</h4>
+            <h4><i class="far fa-check-circle"></i> SEO</h4>
+            <h4><i class="far fa-check-circle"></i> Marketing</h4>
+            <h4><i class="far fa-check-circle"></i> Web support</h4>
+        </div>
+    </section>
+    <footer>
+        <div class="partFooter">
+            <img src="img/aro_00001.png" alt="">
+        </div>
+        <div class="partFooter">
+            <h4>Servicios</h4>
+            <a href="#">Services 1</a>
+            <a href="#">Services 2</a>
+            <a href="#">Services 3</a>
+        </div>
+        <div class="partFooter">
+            <h4>Acerca de</h4>
+            <a href="#">About 1</a>
+            <a href="#">About 2</a>
+            <a href="#">About 3</a>
+        </div>
+        <div class="partFooter">
+            <h4>Redes sociales</h4>
+            <div class="social-media">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+    </footer>
     <script src="https://kit.fontawesome.com/1d50966f71.js" crossorigin="anonymous"></script>
 </body>
 
